include slide overlap fix

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -354,6 +354,9 @@ body[data-format="mobile"]
 
 /* T R A N S I T I O N S */
 /* Single */
+body[data-format="double"]
+	.exit-to-left,.exit-to-right
+		z-index -1
 .page-container.exit-to-left
 	animation exit-to-left transition_opts
 .page-container.enter-from-left
